# ace-playbook

./: .gitignore  LICENSE  README.md  pyproject.toml
ace_playbook/: __init__.py
cli/: ace_offline.py  ace_online.py  ace_playbook.py
examples/: offline_optimize_finance.ipynb  online_agent_loop.py
src/ace_playbook/: __init__.py  config.py  curator.py  embeddings.py  evaluation.py  generator.py  llm_client.py  pipeline_offline.py  pipeline_online.py  playbook.py  reflector.py  retrieval.py  run_example.py  sanitize.py  schemas.py  storage.py  utils.py
src/ace_playbook/prompts/: curator_system.txt  generator_system.txt  reflector_system.txt
tests/: test_bullets_and_merge.py  test_embeddings.py  test_integration_loop.py  test_pipelines.py  test_reflector_attribution.py  test_storage.py
