[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ace-playbook"
version = "0.1.0"
description = "Agentic Context Engineering playbook implementation"
readme = "README.md"
authors = [{name = "OpenAI Ace", email = "noreply@example.com"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.25",
  "pydantic>=1.10,<2.0",
  "sqlalchemy>=2.0",
  "numpy>=1.23",
  "scikit-learn>=1.1",
  "tqdm>=4.66",
  "python-dateutil>=2.8",
  "uvloop>=0.17; platform_system != 'Windows'",
  "tenacity>=8.2",
  "rich>=13.0",
  "typer[all]>=0.9",
  "orjson>=3.9",
  "sentence-transformers>=2.2"
]

[project.optional-dependencies]
test = ["pytest>=7.3", "pytest-asyncio>=0.21"]

dev = ["black>=23.0", "ruff>=0.1", "pytest>=7.3"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B", "UP", "N", "ANN", "RUF"]
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
